# ed_creatures

./: .env.example  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml  steps.csv
i18n/en/: data_docs.ftl
i18n/fr/: data_docs.ftl
migrations/2022-02-10-201856_create_basic_tables/: down.sql  up.sql
migrations/2023-11-18-164826_todo_table/: down.sql  up.sql
migrations/2024-01-15-023836_add_tags/: up.sql
migrations/2024-03-24-155928_update_action_targets/: down.sql  up.sql
migrations/2024-03-29-143932_talents_skills/: down.sql  up.sql
migrations/2024-04-01-000000_create_masks/: down.sql  up.sql
migrations/2024-04-02-000000_add_masks_to_creatures/: down.sql  up.sql
migrations/2024-04-03-000000_add_attack_mods_to_masks/: down.sql  up.sql
src/: database.rs  errors.rs  lib.rs  main.rs  schema.rs  steps.rs
src/handlers/: attacks.rs  authentication_handlers.rs  base.rs  creatures.rs  errors.rs  forms.rs  maneuver.rs  masks.rs  mod.rs  powers.rs  routes.rs  talents.rs  to_do.rs  users.rs  utility.rs
src/models/: attack.rs  authentication.rs  creature.rs  email.rs  maneuver.rs  mask.rs  mod.rs  power.rs  spell.rs  talent.rs  to_do.rs  user.rs
templates/: about.html  base.html  index.html  search_results.html
templates/attacks/: add_attack.html  attack.html  attacks.html  edit_attack_form.html
templates/authentication/: change_password.html  email_verification.html  log_in.html  password_email_sent.html  register.html  registration_error.html  request_password_reset.html
templates/creatures/: copy_creature_with_mask.html  creature.html  delete_creature.html  edit_creature_form.html  in_game_creature.html  new_creature_form.html
(+46 files in other folders)
