[package]
name = "earthdawn_creatures"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
actix-web = "4"
actix-service = "2.0.2"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web-static-files = "4.0"
static-files = "0.2.1"

# database and data
diesel = { version = "2.1.4", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "64-column-tables"]}
diesel_migrations = "2.1.0"
r2d2 = "0.8.9"
lazy_static = "1.4"
shrinkwraprs = "0.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"]}

dotenv = "0.15.0"
chrono = {version = "0.4.31", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
derive_more = "0.99.8"
serde_json = "1.0.78"
rust-argon2 = "1.0.0"
rand = "0.8.4"
regex = "1.5.5"
env_logger = "0.9.0"
strum = { version = "0.25", features = ["derive"] }

# templating
tera = "1.19.1"
tera-text-filters = "1.0"
Inflector = "0.11.4"

# localization
fluent-templates = { version = "*", features = ["tera"] }
deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }

# email
sendgrid = { version = "0.19.2", features = ["async"] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
static-files = "0.2.1"
